--- a/2/debian-10/Dockerfile
+++ b/2/debian-10/Dockerfile
@@ -82,6 +82,7 @@ ENV AIRFLOW_BASE_URL="" \
 
 EXPOSE 8080
 
-USER 1001
+RUN chmod -R 777 /opt/bitnami/airflow/dags
+USER root
 ENTRYPOINT [ "/app-entrypoint.sh" ]
 CMD [ "/run.sh" ]
