--- a/2/debian-10/Dockerfile
+++ b/2/debian-10/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker.io/bitnami/minideb:buster
 LABEL maintainer "TPayMobile <BigData@tpaymobile.com>"
 
-ENV BITNAMI_PKG_CHMOD="-R g+rwX" \
+ENV BITNAMI_PKG_CHMOD="-R a+rwX" \
     BITNAMI_PKG_EXTRA_DIRS="/opt/bitnami/airflow/dags" \
     HOME="/" \
     PATH="/opt/bitnami/python/bin:/opt/bitnami/postgresql/bin:/opt/bitnami/common/bin:/opt/bitnami/airflow/venv/bin:/opt/bitnami/nami/bin:/opt/bitnami/java/bin:$PATH" \
