--- a/2/debian-10/Dockerfile
+++ b/2/debian-10/Dockerfile
@@ -25,6 +25,7 @@ RUN localedef -c -f UTF-8 -i en_US en_US.UTF-8
 RUN update-locale LANG=C.UTF-8 LC_MESSAGES=POSIX && \
     DEBIAN_FRONTEND=noninteractive dpkg-reconfigure locales
 RUN echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen && locale-gen
+RUN /build/bitnami-user.sh
 
 
 COPY rootfs /
